--- a/pair.html
+++ b/pair.html
@@ -55,7 +55,7 @@
 </head>
 <body>
 
-  <h1>ARSLAN-MD Pairing</h1>
+  <h1>BROWAYESU-MD Pairing</h1>
 
   <input type="text" id="number" placeholder="Enter WhatsApp Number (e.g., 254746432359)" />
   <button onclick="getCode()">Generate Pair Code</button>
